# alshaders

./: .clang-format  .clang_complete  .gitignore  BUILD_INSTRUCTIONS.txt  CMakeLists.txt  INSTALL  README  README.md  TODO.txt  alshaders.sublime-project  alshaders.sublime-project.osx  alshaders.sublime-project.win  local.cmake.win  maya_ids.txt  package.in.py  package.py  test.in.py  uigen.py
alAtmosphere/: CMakeLists.txt  alAtmosphere.cpp  alAtmosphere.ui  beta.py  colorimetry.cpp  colorimetry.h  constants.h  math_util.h  spectrum.cpp  spectrum.h  spectrum_grid.h
alBlackbody/: AEalBlackbodyTemplate.mel  CMakeLists.txt  alBlackbody.cpp  alBlackbody.mtd  alBlackbody.spdl  alBlackbody.ui  alBlackbody.ui.py  alBlackbodyTemplate.py
alCache/: CMakeLists.txt  alCache.cpp  alCache.ui  alCache.ui.py  htoa_memory.h
alCel/: CMakeLists.txt  alCel.cpp  alCel.ui
alCloth/: AEalClothTemplate.mel  CMakeLists.txt  Irawan.cpp  Irawan.h  alCloth.cpp  alCloth.mtd
alColorSpace/: CMakeLists.txt  alColorSpace.cpp  alColorSpace.mtd  alColorSpace.ui  alColorSpace.ui.py  alColorSpaceTemplate.py
alCombine/: AEalCombineColorTemplate.mel  AEalCombineFloatTemplate.mel  CMakeLists.txt  alCombineColor.cpp  alCombineColor.mtd  alCombineColor.osl  alCombineColor.ui  alCombineColor.ui.py  alCombineColorTemplate.py  alCombineFloat.cpp  alCombineFloat.mtd  alCombineFloat.osl  alCombineFloat.ui  alCombineFloat.ui.py  alCombineFloatTemplate.py
alCurvature/: AEalCurvatureTemplate.mel  CMakeLists.txt  alCurvature.cpp  alCurvature.mtd  alCurvature.spdl  alCurvature.ui  alCurvature.ui.py  alCurvatureTemplate.py
alDiamond/: CMakeLists.txt  alDiamond.cpp  alDiamond.h  alDiamond.ui.py
alFlake/: CMakeLists.txt  alFlake.cpp  alFlake.ui
alFresnel/: CMakeLists.txt  alFresnelConductor.cpp  alFresnelConductor.ui  getrg.py
alHair/: AEalHairTemplate.mel  CMakeLists.txt  aiMarschner.cpp  aiMarschner.mtd  alHair.cpp  alHair.mtd  alHair.ui  alHair.ui.py  alHairTemplate.py  scattering.h
alIES/: AEalIESTemplate.mel  CMakeLists.txt  alIES.cpp  alIES.mtd
alImage/: CMakeLists.txt  alImage.cpp  alImage.ui.py
alInputVector/: AEalInputVectorTemplate.mel  CMakeLists.txt  alInputScalar.cpp  alInputScalar.ui  alInputVector.cpp  alInputVector.mtd  alInputVector.ui  alInputVector.ui.py  alInputVectorTemplate.py
alIntToFloat/: CMakeLists.txt  alIntToFloat.cpp  alIntToFloat.ui.py
alJitterColor/: CMakeLists.txt  alJitterColor.cpp  alJitterColor.osl  alJitterColor.ui  alJitterColor.ui.py
alLayer/: AEalLayerTemplate.mel  CMakeLists.txt  alLayer.cpp  alLayer.mtd  alLayer.spdl  alLayer.ui  alLayer.ui.py  alLayerColor.cpp  alLayerColor.osl  alLayerColor.ui  alLayerFloat.cpp  alLayerFloat.osl  alLayerFloat.ui  alLayerTemplate.py
alLightGroups/: CMakeLists.txt  alLightGroups.cpp  alLightGroups.mtd  alLightGroupsTemplate.py
alMeasured/: CMakeLists.txt  alMeasured.cpp  alMeasured.ui  brdf_read.cpp  brdf_read.h
alNoise/: AEalCellNoiseTemplate.mel  AEalFractalTemplate.mel  AEalNoiseTemplate.mel  CMakeLists.txt  alCellNoise.cpp  alCellNoise.mtd  alCellNoise.spdl  alCellNoise.ui  alCellNoise.ui.py  alCellNoiseTemplate.py  alFlowNoise.cpp  alFlowNoise.mtd  alFlowNoise.spdl  alFlowNoise.ui  alFlowNoise.ui.py  alFlowNoiseTemplate.py  alFractal.cpp  alFractal.mtd  alFractal.osl  alFractal.spdl  alFractal.ui  alFractal.ui.py  alFractalTemplate.py  alGaborNoise.cpp  alGaborNoise.mtd  alGaborNoise.spdl  alGaborNoise.ui  alGaborNoise.ui.py  alGaborNoiseTemplate.py  alNoise.cpp  alNoise.mtd
alPattern/: AEalPatternTemplate.mel  CMakeLists.txt  alPattern.cpp  alPattern.mtd  alPattern.osl  alPattern.ui  alPattern.ui.py  alPatternTemplate.py
alPhotometric/: AEalPhotometricTemplate.mel  CMakeLists.txt  Photometric.cpp  Photometric.h  alPhotometric.cpp  alPhotometric.mtd  alPhotometric.spdl  alPhotometricTemplate.py
alRemap/: AEalRemapColorTemplate.mel  AEalRemapFloatTemplate.mel  CMakeLists.txt  alRemapColor.cpp  alRemapColor.mtd  alRemapColor.osl  alRemapColor.ui  alRemapColor.ui.py  alRemapColorTemplate.py  alRemapFloat.cpp  alRemapFloat.mtd  alRemapFloat.osl  alRemapFloat.ui  alRemapFloat.ui.py  alRemapFloatTemplate.py  osl_remap.h
alSpectral/: CMakeLists.txt  SPD.cpp  SPD.h  alSpectral.cpp  alSpectral.ui  alSpectralColor.cpp  alSpectralColor.ui  colors.py  colors.txt
alSurface/: .alSurface.cpp.swp  AEaiAlSurfaceTemplate.mel  AEalSurfaceTemplate.mel  BeckmannMicrofacet.cpp  BeckmannMicrofacet.h  CMakeLists.txt  MIS.h  Refraction.cpp  Refraction.h  Shadows.h  alSurface.cpp  alSurface.h  alSurface.mtd  alSurface.spdl  alSurface.ui  alSurface.ui.py  alSurfaceAOVs.py  alSurfaceOLD  alSurfaceTemplate.py  coltable.cpp  ddint.cpp  microfacet.h  sss.cpp  sss.h
alSwitch/: CMakeLists.txt  alSwitchColor.cpp  alSwitchColor.osl  alSwitchColor.ui  alSwitchFloat.cpp  alSwitchFloat.osl  alSwitchFloat.ui
alTriplanar/: CMakeLists.txt  alTriplanar.cpp  alTriplanar.ui  alTriplanar.ui.py
alWriteIds/: CMakeLists.txt  alWriteIds.cpp  alWriteIds.mtd  alWriteIds.ui
alWriteIdsDriver/: CMakeLists.txt  alWriteIdsDriver.cpp
common/: CMakeLists.txt  Color.cpp  Color.h  IES.cpp  IES.h  Remap.h  alRemap.mel  alShaders.py  alUtil.cpp  alUtil.h  alsIdWindow.mel  alsUtil.mel  als_lg.psd  aovs.h  exr.cpp  exr.h  fresnel.cpp  fresnel.h  mtrace.h  shelf_alShaders.mel  stats.h  tea.h
cryptomatte/: CMakeLists.txt  cryptomatte.h  cryptomatte_filter.cpp  filters.h
cryptomatte/nuke/: cryptomatte_utilities.py
doc/: Doxyfile  Doxyfile.bak  stylesheet.css
doc/src/: alSurface.dox  mainPage.dox
iestest/: CMakeLists.txt  iestest.cpp
krint/: CMakeLists.txt  krint.cpp
share/cmake/: FindArnold.cmake
test/: aovs.nk  test.nk  test_ai_bplastic_rough.ass  test_ai_bplastic_shiny.ass  test_als_bplastic_rough.ass  test_als_bplastic_shiny.ass  test_als_ccover_bump.ass  test_als_glass.ass  test_als_goldleaf.ass  test_als_jade.ass  test_als_lyr_glass_goldleaf.ass  test_als_merlot.ass  test_als_metallicpaint.ass  test_als_skin.ass  test_header.ass
